<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DestinationInputActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/txtEnterDestination"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textCursorDrawable="@drawable/textcursor"
            android:textSize="30sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="Or"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark" />

        <Button
            android:id="@+id/buttonPointDestInMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignRight="@+id/editTextAddress"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="26dp"
            android:background="@drawable/custom_button"
            android:text="@string/txtPointOutDestInMap" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button"
            android:text="@string/txtSend" />
    </RelativeLayout>

</ScrollView>